# AutoSwitch

./: .gitignore  README.md  __main__.py  autoswitch.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
autoswitch/: __init__.py  __main__.py  cli.py  exceptions.py  network.py  utils.py
autoswitch/tests/: test_parser.py
autoswitch_core/: command.py  device.py  network.py  type.py  utils.py
sample_configs/: hostname.txt  router_rip_config.txt  switch_ssh_config_.txt
tests/: test_parser.py
