[metadata]
name = autoswitch
author = Kyle Davis
author_email = contact@kyledavis.dev
description = "Configure Cisco devices"
project_urls =
    Bug Tracker = https://github.com/kyledavis124/AutoSwitch/issues
    Github = https://github.com/kyledavis124/AutoSwitch
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU 3 License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8